Introduce invisible-font-undo, Fix segmented control whitespace issue

--- a/docs/less/blocks/error.less
+++ b/docs/less/blocks/error.less
@@ -22,6 +22,6 @@
   margin: 0 auto;
   margin-bottom: 20px;
 
-  font-size: @font-size-large;
+  font-size: 1.1428;
 }
 /* Copyright AXA Versicherungen AG 2015 */
