--- a/less/style/typography.less
+++ b/less/style/typography.less
@@ -1,9 +1,10 @@
 @import './variables';
 
 body {
-  color: @color-gray--darkest;
+  color: @font-color;
   font-family: ITCFranklinGothicStd, Arial, sans-serif;
-  font-size: 14px;
+  font-size: @font-size;
+  line-height: @line-height;
 }
 
 p {
